--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/microservices": "^10.2.6",
+    "@nestjs/mongoose": "^10.0.1",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/schedule": "^3.0.4",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.3",
     "axios": "^1.0.0",
+    "bcrypt": "^5.1.1",
     "nestjs-rmq": "^2.11.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
@@ -30,8 +35,10 @@
     "@nx/node": "16.9.1",
     "@nx/webpack": "16.9.1",
     "@nx/workspace": "16.9.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
+    "@types/passport-jwt": "^3.0.10",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "eslint": "~8.46.0",
