--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@purple/contracts": ["contracts/src/index.ts"],
+      "@purple/interfaces": ["interfaces/src/index.ts"],
       "@purple/libs/contracts": ["libs/contracts/src/index.ts"]
     }
   },
